--- a/config.yaml
+++ b/config.yaml
@@ -11,9 +11,9 @@ data_config:
 ---
 fed_config:
   C: 0.1
-  K: 100
-  R: 500
-  E: 10
+  K: 5
+  R: 5
+  E: 2
   B: 10
   criterion: torch.nn.CrossEntropyLoss
   optimizer: torch.optim.SGD
@@ -25,7 +25,7 @@ optim_config:
 init_config:
   init_type: "xavier"
   init_gain: 1.0
-  gpu_ids: [0, 1, 2]
+  gpu_ids: [0]#, 1, 2]
 ---
 model_config: 
   #name: TwoNN
@@ -34,10 +34,10 @@ model_config:
   #num_classes: 10
   
   name: CNN
-  in_channels: 1
+  in_channels: 3
   hidden_channels: 32
   num_hiddens: 512
-  num_classes: 10
+  num_classes: 9
 ---
 log_config:
   log_path: "./log/"
