--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ global_config:
 data_config:
   data_path: "./data/"
   dataset_name: "MNIST"
-  num_shards: 200
+  num_shards: 50
   iid: False
 ---
 fed_config:
@@ -14,7 +14,7 @@ fed_config:
   K: 5
   R: 5
   E: 2
-  B: 10
+  B: 256
   criterion: torch.nn.CrossEntropyLoss
   optimizer: torch.optim.SGD
 ---
@@ -25,7 +25,7 @@ optim_config:
 init_config:
   init_type: "xavier"
   init_gain: 1.0
-  gpu_ids: [0, 1]#, 1, 2]
+  gpu_ids: [0]#, 1, 2]
 ---
 model_config: 
   #name: TwoNN
