--- a/config.yaml
+++ b/config.yaml
@@ -16,16 +16,16 @@ fed_config:
   E: 20
   B: 256
   criterion: torch.nn.CrossEntropyLoss
-  optimizer: torch.optim.SGD
+  optimizer: torch.optim.Adam
 ---
 optim_config:
-  lr: 0.01
+  lr: 0.02
   momentum: 0.9
 ---
 init_config:
   init_type: "xavier"
   init_gain: 1.0
-  gpu_ids: [0, 1]#, 1, 2]
+  gpu_ids: [0]#, 1, 2]
 ---
 model_config: 
   #name: TwoNN
