--- a/config.yaml
+++ b/config.yaml
@@ -16,7 +16,7 @@ fed_config:
   E: 20
   B: 256
   criterion: torch.nn.CrossEntropyLoss
-  optimizer: torch.optim.Adam
+  optimizer: torch.optim.SGD
 ---
 optim_config:
   lr: 0.02
