--- a/config.yaml
+++ b/config.yaml
@@ -16,11 +16,11 @@ fed_config:
   E: 1
   B: 256
   criterion: torch.nn.CrossEntropyLoss
-  optimizer: torch.optim.SGD
+  optimizer: torch.optim.Adam
 ---
 optim_config:
   lr: 0.002
-  momentum: 0.9
+  #momentum: 0.9
 ---
 init_config:
   init_type: "kaiming"
